<?xml version="1.0" encoding="utf-8"?>
<resources>   
	<string name="app_name">ALISEO</string>
	<string name="pref_start_now">Avvia l\'applicazione di test</string>
	<string name="pref_login_now">Collegamento manuale</string>
	<string name="pref_logout_now">Scollegamento manuale</string>
	<string name="pref_preferences">Preferenze</string>
	<string name="pref_stringaauth">Gettone di autenticazione</string>
	<string name="pref_stringaauth_summary">Tocca per cambiare il gettone di autenticazione</string>
	<string name="pref_enabled">Collegamento automatico</string>
	<string name="pref_enabled_summary">Abilita il collegamento automatico</string>
	<string name="pref_notify_title">Notifiche</string>
	<string name="pref_notify_error">Errori</string>
	<string name="pref_notify_success">Collegamento</string>
	<string name="pref_notify_disconnect">Scollegamento</string>
	<string name="pref_notify_none">Nessuna notifica</string>
	<string name="pref_notify_deliminator">,\u0020</string>
	<string name="pref_error_notify_title">Segnale notifica errori</string>
	<string name="pref_error_notify_sound">Suono</string>
	<string name="pref_error_notify_vibrate">Vibrazione</string>
	<string name="pref_error_notify_lights">Lampeggio</string>
	<string name="pref_error_notify_toast">Avviso</string>
	<string name="pref_error_notify_none">Nessuno</string>
	<string name="pref_error_notify_deliminator">,\u0020</string>
	<string name="pref_success_notify_title">Segnale notifica collegamento</string>
	<string name="pref_success_notify_sound">Suono</string>
	<string name="pref_success_notify_vibrate">Vibrazione</string>
	<string name="pref_success_notify_lights">Lampeggio</string>
	<string name="pref_success_notify_toast">Avviso</string>
	<string name="pref_success_notify_none">Nessuno</string>
	<string name="pref_success_notify_deliminator">,\u0020</string>
	<string name="pref_disconnect_notify_title">Segnale notifica scollegamento</string>
	<string name="pref_disconnect_notify_sound">Suono</string>
	<string name="pref_disconnect_notify_vibrate">Vibrazione</string>
	<string name="pref_disconnect_notify_lights">Lampeggio</string>
	<string name="pref_disconnect_notify_toast">Avviso</string>
	<string name="pref_disconnect_notify_none">Nessuno</string>
	<string name="pref_disconnect_notify_deliminator">,\u0020</string>
	<string name="pref_language_title">Lingua</string>
	<string name="pref_about">Informazioni</string>
	<string name="pref_version_summary">Versione %s</string>
	<string name="pref_website">Visita il sito</string>
	<string name="pref_website_summary">www.topnet.it</string>
	<string name="pref_author">Contatta TopneT</string>
	<string name="pref_author_summary">support@topnet.it</string>
	<string name="login_successful_ticker">Sei collegato ad ALISEO</string>
	<string name="login_successful_title">ALISEO</string>
	<string name="login_successful_content">Tocca per avviare l\'applicazione di test.</string>
	<string name="login_disconnected_ticker">Sei scollegato da ALISEO</string>
	<string name="login_disconnected_title">ALISEO</string>
	<string name="login_disconnected_content">Sei scollegato da ALISEO.</string>
	<string name="login_refused_ticker">Accesso negato ad ALISEO</string>
	<string name="login_refused_title">ALISEO</string>
	<string name="login_refused_content">Accesso negato ad ALISEO. Contatta l\'assistenza.</string>
	<string name="login_io_error_ticker">Errore di collegamento ad ALISEO</string>
	<string name="login_io_error_title">ALISEO</string>
	<string name="login_io_error_content">Tocca per ritentare il collegamento.</string>
</resources>
